--- a/views/aindex.handlebars
+++ b/views/aindex.handlebars
@@ -9,12 +9,12 @@
         <div class="row">
           <div class="col-md-12">
             <div class="customer-contents">
-              _____________________________________________________
+              ____________________________________________________________________________________
               <div class="customer-contents2">
-                <li><b>Name:</b> {{this.name }}</li>
-                <li><b>Description:</b> {{this.description}}</li>
-                <li><b>Tagline:</b> {{this.tagline}}</li>
-                <li><b>Image:</b> <img src="{{image}} " style=" height:50px; width:50px;"><img src="{{image1}} " style=" height:50px; width:50px;"><img src="{{image2}} " style=" height:50px; width:50px;"></li>
+                <li><b>Name:</b><br> {{this.name }}</li>
+                <li><b>Description:</b><br> {{this.description}}</li>
+                <li><b>Tagline:</b><br> {{this.tagline}}</li>
+                <li><b>Image:</b> <br><img src="{{image}} " style=" height:50px; width:50px;"><img src="{{image1}} " style=" height:50px; width:50px;"><img src="{{image2}} " style=" height:50px; width:50px;"></li>
               </div>
             </div>
           </div>
