--- a/views/elementary.handlebars
+++ b/views/elementary.handlebars
@@ -51,6 +51,12 @@ body {
   width: 100%;
   height: 700px;
 }
+.slide-top {
+  margin-top: 115px;
+}
+.slide-margin {
+  margin-top: 150px;
+}
 .divider {
   background-color: #fff;
   height: 50px;
@@ -233,7 +239,7 @@ a {
   text-align: center;
 }
 .news-img {
-  max-width: 500px;
+  width: 100%;
   max-height: 300px;
 }
 .img-con {
@@ -273,15 +279,6 @@ a {
     font-size: 12px;
     font-weight: bold;
 }
-.footer {
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding: 1rem;
-    color: white;
-    background-color: #272727;
-    text-align: center;
-  }
 .dropdown-content a:hover {
   color: blue;
   text-decoration: none;
@@ -297,10 +294,30 @@ a {
   padding: 30px;
   align-content: center;
 }
-.full-img {
-  max-width: 450px; 
-  max-height: 250px;
-  margin: 0 auto;
+.full-img1 {
+  width: 30%; 
+  height: 200px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.full-img2 {
+  width: 30%;
+  height: 200px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.full-img3 {
+  width: 30%;
+  height: 200px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.img-holder {
+  background-color: red;
+  border: 20px;
 }
 .img-box {
   margin: 20px;
@@ -308,8 +325,40 @@ a {
 .full-article {
   padding: 20px;
   font-style: justify;
+  overflow: auto;
+  clear: none;
 }
 .article-p {
   text-transform: capitalize;
+  font-style: justify;
+}
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 </style>
