--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -7,15 +7,6 @@ body {
   color: #000000;
   background-color: #ffffff;
 }
-.footer {
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding: 1rem;
-    color: white;
-    background-color: #272727;
-    text-align: center;
-  }
 #mainNav {
   height: 110px;
   padding: 30px;
@@ -31,6 +22,12 @@ body {
 .cover {
   width: 100%;
   height: 700px;
+}
+.slide-top {
+  margin-top: 115px;
+}
+.slide-margin {
+  margin-top: 150px;
 }
 .divider {
   background-color: #fff;
@@ -214,7 +211,7 @@ a {
   text-align: center;
 }
 .news-img {
-  max-width: 500px;
+  width: 100%;
   max-height: 300px;
 }
 .img-con {
@@ -269,10 +266,30 @@ a {
   padding: 30px;
   align-content: center;
 }
-.full-img {
-  max-width: 450px; 
-  max-height: 250px;
-  margin: 0 auto;
+.full-img1 {
+  width: 30%; 
+  height: 200px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.full-img2 {
+  width: 30%;
+  height: 200px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.full-img3 {
+  width: 30%;
+  height: 200px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.img-holder {
+  background-color: red;
+  border: 20px;
 }
 .img-box {
   margin: 20px;
@@ -280,9 +297,41 @@ a {
 .full-article {
   padding: 20px;
   font-style: justify;
+  overflow: auto;
+  clear: none;
 }
 .article-p {
   text-transform: capitalize;
+  font-style: justify;
+}
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 </style>
 {{!-- <div class="container-fluid">
