--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,12 +9,12 @@
     <meta name="author" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Barangay Tanyag</title>
-    <link rel="icon" href="/icon.png">
+    <link rel="icon" href="/img-icon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
 	<style type="text/css">
 		@import url(https://fonts.googleapis.com/css?family=Oswald:400,300);
-        @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+    @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 html {
   width: 100%;
   height: 100%;
@@ -41,6 +41,9 @@ body {
 }
 .slide-top {
   margin-top: 115px;
+}
+.slide-margin {
+  margin-top: 150px;
 }
 .divider {
   background-color: #fff;
@@ -224,7 +227,7 @@ a {
   text-align: center;
 }
 .news-img {
-  max-width: 500px;
+  width: 100%;
   max-height: 300px;
 }
 .img-con {
@@ -279,10 +282,30 @@ a {
   padding: 30px;
   align-content: center;
 }
-.full-img {
-  max-width: 450px; 
-  max-height: 250px;
-  margin: 0 auto;
+.full-img1 {
+  width: 30%; 
+  height: 200px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.full-img2 {
+  width: 30%;
+  height: 200px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.full-img3 {
+  width: 30%;
+  height: 200px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.img-holder {
+  background-color: red;
+  border: 20px;
 }
 .img-box {
   margin: 20px;
@@ -290,11 +313,13 @@ a {
 .full-article {
   padding: 20px;
   font-style: justify;
+  overflow: auto;
+  clear: none;
 }
 .article-p {
   text-transform: capitalize;
+  font-style: justify;
 }
-
 * {box-sizing:border-box}
 
 /* Slideshow container */
@@ -324,6 +349,7 @@ a {
   from {opacity: .4} 
   to {opacity: 1}
 }
+
 	</style>
 </head>
 <body id="page-top">
@@ -333,7 +359,7 @@ a {
 <nav class="navbar navbar-default navbar-expand-sm fixed-top" id="mainNav">
   <!-- Brand/logo -->
   <a class="navbar-brand" href="#">
-    <img class="brand-img" src="/header.png" alt="logo">
+    <img class="brand-img" src="/Header(2).png" alt="logo">
   </a>
   
   <!-- Links -->
@@ -384,12 +410,14 @@ a {
     </div>
    --}}  {{{body}}}
   <div class="divider"></div>
+  <hr>
    <div class="footer">
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">Copyright &copy; 2018. Barangay Tanyag City of Taguig. All rights reserved.
       <a href="/login"><img src="/settings.png" alt="logo" style='margin right: 10px'>
     </div>
     </div>
+
 
 
 
@@ -428,7 +456,7 @@ $( document ).ready(function() {
    	document.getElementByID('qqq').style.bottom = '0';
 });
 </script>
-<script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="/index.js"></script>
   <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
