--- a/views/mission.handlebars
+++ b/views/mission.handlebars
@@ -1,32 +1,3 @@
-{{!-- <!DOCTYPE html>
-<html>
-<head>
-	
-	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-
-	<title>Mission and Vision</title>
-
-	<link rel="icon" href="logo.png">
-	<link rel="stylesheet" type="text/css" href="style.css">
-
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-</head> --}}
 <style>
 html {
 	width: 100%;
@@ -51,6 +22,12 @@ body {
 .cover {
 	width: 100%;
 	height: 700px;
+}
+.slide-top {
+	margin-top: 115px;
+}
+.slide-margin {
+	margin-top: 150px;
 }
 .divider {
 	background-color: #fff;
@@ -125,15 +102,6 @@ a {
 	margin-bottom: 30px;
 
 }
-.footer {
-	  right: 0;
-	  bottom: 0;
-	  left: 0;
-	  padding: 1rem;
-	  color: white;
-	  background-color: #272727;
-	  text-align: center;
-	}
 .mis-txt {
 	text-align: center;
 	font-size: 16px;
@@ -243,7 +211,7 @@ a {
 	text-align: center;
 }
 .news-img {
-	max-width: 500px;
+	width: 100%;
 	max-height: 300px;
 }
 .img-con {
@@ -298,10 +266,30 @@ a {
 	padding: 30px;
 	align-content: center;
 }
-.full-img {
-	max-width: 450px; 
-	max-height: 250px;
-	margin: 0 auto;
+.full-img1 {
+	width: 30%; 
+	height: 200px;
+	margin-left: 10px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
+.full-img2 {
+	width: 30%;
+	height: 200px;
+	margin-left: 10px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
+.full-img3 {
+	width: 30%;
+	height: 200px;
+	margin-left: 10px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
+.img-holder {
+	background-color: red;
+	border: 20px;
 }
 .img-box {
 	margin: 20px;
@@ -309,66 +297,44 @@ a {
 .full-article {
 	padding: 20px;
 	font-style: justify;
+	overflow: auto;
+	clear: none;
 }
 .article-p {
 	text-transform: capitalize;
+	font-style: justify;
+}
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 </style>
 
-{{!-- <body id="page-top">
-
-
-	<!-- NAVIGATION -->
-<nav class="navbar navbar-default navbar-expand-sm fixed-top" id="mainNav">
-  <!-- Brand/logo -->
-  <a class="navbar-brand" href="#">
-    <img class="brand-img" src="/header.png" alt="logo">
-  </a>
-  
-  <!-- Links -->
-  <ul class="nav navbar-nav">
-    <li class="nav-item active items">
-		<a class="nav-link dropdown-btn" href="/">HOME<span class="sr-only">(current)</span></a>
-	</li>
-    <li class="dropdown items">
-		<a class="dropdown-toggle dropdown-btn" data-toggle="dropdown" href="#">ABOUT</a>
-			<ul class="dropdown-menu dropdown-content">
-				<li><a href="/about/mission">MISSION AND VISION</a></li><br>
-				<li><a href="/about/history">HISTORY OF BARANGAY</a></li><br>
-				<li><a href="/about/barangayprofile">BARANGAY PROFILE</a></li><br>
-				<li><a href="/about/purok">PUROK/SUBDIVISION</a></li>
-			</ul>
-	</li>
-    <li class="dropdown items">
-		<a class="dropdown-toggle dropdown-btn" data-toggle="dropdown" href="#">GOVERNMENT<span class="caret"></span></a>
-			<ul class="dropdown-menu down dropdown-content">
-				<li><a href="/government/electedofficials">ELECTED OFFICIALS</a></li><br>
-				<li><a href="/government/ngo">NGO</a></li>
-			</ul>
-	</li>
-    <li class="dropdown items">
-		<a class="dropdown-toggle dropdown-btn" data-toggle="dropdown" href="#">EDUCATION<span class="caret"></span></a>
-			<ul class="dropdown-menu dropdown-content">
-				<li><a href="/school/elementary">ELEMENTARY SCHOOLS</a></li><br>
-				<li><a href="/school/highschool">SECONDARY SCHOOLS</a></li><br>
-				<li><a href="/school/preschool">PRE-SCHOOLS</a></li>
-			</ul>
-	</li>
-  </ul>
-</nav>
-
-
-<div class="container-fluid">
-		
-	
-		<div class="row">
-			<div class="col-md-12">
-				<div class="container-fluid">
-					<img class="cover" src="/cover.png">
-				</div>
-			</div>
-		</div>
- --}}
 		<div class="row">
 			<div class="col-md-12">
 				<div class="divider"></div>
